# grpc-precompiled

./: .gitignore  README.md  greeter_client.cc  greeter_server.cc  meson.build
.github/workflows/: build-grpc-aarch64.yml  build-grpc-arm.yml  build-grpc-x86-64.yml
protos/: generate.sh
subprojects/: grpc.wrap
subprojects/packagefiles/grpc-v1.53.1/: meson-bootstrap.pl  meson.build  prepare-grpc.sh
subprojects/packagefiles/grpc-v1.54.2/: meson.build
